tests/rosetta/out/Java/associative-array-merging.java
// Generated by Mochi compiler v0.10.28 on 2006-01-02T15:04:05Z
// associative-array-merging.mochi
import java.util.*;

public class AssociativeArrayMerging {
    static Map<String,Object> merge(Map<String,Object> base, Map<String,Object> update) {
        Map<String,Object> result = new LinkedHashMap<String,Object>();
        for (String k : base.keySet()) {
            result.put(k, base.get(k));
        }
        for (String k : update.keySet()) {
            result.put(k, update.get(k));
        }
        return result;
    }
    static void main() {
        Map<String,Object> base = new Base("Rocket Skates", 12.750000, "yellow");
        Map<String,Object> update = new Update(15.250000, "red", 1974);
        Map<String,Object> result = merge(base, update);
        System.out.println(result);
    }
    public static void main(String[] args) {
        main();
    }
}
